style: fix navbar to exactly align with archweb

--- a/tracker/static/style.css
+++ b/tracker/static/style.css
@@ -52,17 +52,20 @@ select {
 	margin: 0;
 	padding: 0;
 	text-align: right;
+	font-size: 0;
+	letter-spacing: 0;
 }
 
 #archnavbar ul li {
 	display: inline-block;
 	font-size: 14px;
 	font-family: sans-serif !important;
-	line-height: 14px;
+	line-height: 1.4;
 	letter-spacing: 0;
 	padding-top: 14px;
 	padding-right: 15px;
 	padding-left: 15px;
+	margin: 0;
 }
 
 #archnavbarlist li a {
